--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "predev": "node build.js --dev",
         "dev": "nuxt",
         "prebuild": "node build.js",
-        "build": "nuxt build",
+        "build": "npm rum build",
         "start": "nuxt start",
         "pregenerate": "node build.js",
         "generate": "nuxt generate",
