--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "name": "postwoman",
     "version": "1.8.0",
     "description": "A free, fast and beautiful API request builder",
-    "author": "liyasthomas",
+    "author": "akizuka",
     "private": true,
     "scripts": {
         "predev": "node build.js --dev",
         "dev": "nuxt",
         "prebuild": "node build.js",
-        "build": "npm rum build",
+        "build": "nuxt build",
         "start": "nuxt start",
         "pregenerate": "node build.js",
         "generate": "nuxt generate",
